Updated math homework for week 5

--- a/week5/homework/ac10281_hw5_q3to5.md
+++ b/week5/homework/ac10281_hw5_q3to5.md
@@ -106,32 +106,64 @@ __Solution:__ This function is one-to-one but NOT onto. Onto functions must have
 
 Let A be defined to be the set $\{1, 2, 3, 4, 5, 6, 7, 8\}$ and let $B = \{1\}$. $f: P(A) \to P(A)$. For $X \subseteq A$, $f(X) = X - B$. Recall that for a finite set A, P(A) denotes the power set of A which is the set of all subsets of A.
 
-__Solution:__ 
+__Solution:__  This function is NEITHER one-to-one NOR onto. The elements $\{1, 2\}$ and $\{2\}$ will both match with $\{2\}$ in the target, such that $f(\{1, 2\}) = f(\{2\}) = \{2\}$, therefore showing it can't be one-to-one.
+
+No element in the $P(A)$ where $f(x) = \{1\}$, therefore showing it can't be onto.
 
 ### Give an example of a function from the set of integers to the set of positive integers that is:
 
-#### A) one-to-one, but not onto.
+#### one-to-one, but not onto.
 
-#### A) onto, but not one-to-one.
-$f(x) = |x|$
+$$
+\begin{equation*}
+f(x) = \begin{cases}
+    2x+3 &\text {if } x \geq 0 \\
+    -2x &\text{if } x < 0
+        \end{cases}
+\end{equation*}
+$$
 
-#### A) one-to-one, and onto.
+#### onto, but not one-to-one.
+$$
+f(x) = |x| + 1
+$$
 
-#### A) neither one-to-one nor onto.
-$f(x) = x^2$
+#### one-to-one, and onto.
 
+$$
+\begin{equation*}
+f(x) = \begin{cases}
+    2x+1 &\text {if } x \geq 0 \\
+    -2x &\text{if } x < 0
+        \end{cases}
+\end{equation*}
+$$
+
+#### neither one-to-one nor onto.
+
+$$
+f(x) = x^2
+$$
 
 ## Question 5:
 
-### 4.3.2
+### 4.3.2 Finding inverses of functions.
 
-#### C)
+For each of the following functions, indicate whether the function has a well-defined inverse. If the inverse is well-defined, give the input/output relationship of $f^{-1}$
+
+#### C) $f:\mathbb{R} \to \mathbb{R}.$ $f(x) = 2x + 3$
 
 #### D)
+Let $A$ be defined to be the set $\{1, 2, 3, 4, 5, 6, 7, 8\}$
 
-#### G)
+$f: P(A) \to \{0, 1, 2, 3, 4, 5, 6 ,7, 8\}$
 
-#### I)
+For $X \subseteq A$, $f(X) = \vert X \vert$. Recall that for a finite set $A, P(A)$ denotes the power set of $A$ which is the set of all subsets of $A$.
+
+#### G) $f: \{0, 1\}^3 \to \{0, 1\}^3.$
+The output of $f$ is obtained by taking the input string and reversing the bits. For example. $f(011) = 110.$
+
+#### I) $f: \mathbb{Z} \times \mathbb{Z} \to \mathbb{Z} \times \mathbb{Z}, f(x, y)= (x + 5, y - 2)$
 
 ### 4.4.8
 
