--- a/week5/homework/ac10281_hw5_q3to5.md
+++ b/week5/homework/ac10281_hw5_q3to5.md
@@ -160,10 +160,32 @@ $f: P(A) \to \{0, 1, 2, 3, 4, 5, 6 ,7, 8\}$
 
 For $X \subseteq A$, $f(X) = \vert X \vert$. Recall that for a finite set $A, P(A)$ denotes the power set of $A$ which is the set of all subsets of $A$.
 
+__Solution:__ The inverse for this function is NOT well-defined.
+
+$f^{-1}(1)$ would produce multiple values from the domain $P(A)$ such as $\{0\}$, $\{1\}$ and other such single element sets. 
+
 #### G) $f: \{0, 1\}^3 \to \{0, 1\}^3.$
 The output of $f$ is obtained by taking the input string and reversing the bits. For example. $f(011) = 110.$
 
+__Solution:__ The inverse of this function is well-defined.
+
+$$
+\begin{equation*}
+f(x)
+\end{equation*}
+$$
+
 #### I) $f: \mathbb{Z} \times \mathbb{Z} \to \mathbb{Z} \times \mathbb{Z}, f(x, y)= (x + 5, y - 2)$
+
+__Solution:__ The inverse of this function is well-defined.
+
+$$
+\begin{align*}
+f(x, y) &= (x + 5, y - 2) \\
+f^{-1}(x, y) &=  (x - 5, y + 2)
+
+\end{align*}
+$$
 
 ### 4.4.8
 
