--- a/week5/homework/ac10281_hw5_q3to5.md
+++ b/week5/homework/ac10281_hw5_q3to5.md
@@ -59,6 +59,8 @@ $f: P(A) \to P(A).$ For $X \subseteq A, f(X) = X - \{1\}$
 
 __Solution:__ $\{\emptyset, \{2\}, \{3\}, \{2, 3\}\}$
 
+\newpage
+
 ## Question 4:
 
 ### 4.2.2: Properties of algebraic functions.
@@ -81,7 +83,7 @@ This function is NOT onto. While x+1 is onto, the expression $2y$ can never be 1
 
 This function is NOT one-to-one. $(1, 3)$ and $(2, 1)$ both map to the output 5.
 
-This function is NOT onto. The value 1, 2 can't be mapped in the target domain $\mathbb{Z^+}$ can't be mapped to by any value of $(x, y)$. This can be seen when you input the lowest values that be represented for $(x, y)$, that being $(1, 1)$. These values map to the value of 3.
+This function is NOT onto. The elements 1 and 2 in the co-domain $\mathbb{Z^+}$ can't be mapped to by $f(x, y)$. This can be seen when you input the lowest values that can be represented for $f(x, y)$, that being $f(1, 1)$. These values map to the value of 3.
 
 ### 4.2.4 Properties of functions on strings and power sets
 
@@ -90,7 +92,7 @@ For each of the functions below, indicate whether the function is onto, one-to-o
 #### B) $f: \{0, 1\}^3 \to \{0, 1\}^3$
 The output of f is obtained by taking the input string and replacing the first bit by 1, regardless of whether the first bit is a 0 or 1. For example, f(001) = 101 and f(110) = 110.
 
-__Solution:__ This function is neither one-to-one nor onto. Since the first bit of the input string is always replaced with 1, no elements in the \{0, 1\}^3 that start with a 0 can be mapped to, making this not onto. And since multiple values in the domain can be mapped to the same value in the target (for instance, $\{001\} = 101$ and $\{101\} = 101$), then this function can't be one-to-one.
+__Solution:__ This function is neither one-to-one nor onto. Since the first bit of the input string is always replaced with 1, no elements in the $\{0, 1\}^3$ that start with a 0 can be mapped to, making this not onto. And since multiple values in the domain can be mapped to the same value in the target (for instance, $\{001\} = 101$ and $\{101\} = 101$), then this function can't be one-to-one.
 
 #### C) $f: \{0, 1\}^3 \to \{0, 1\}^3$
 The output of f is obtained by taking the input string and reversing the bits. For example $f(011) = 110$.
@@ -98,29 +100,28 @@ The output of f is obtained by taking the input string and reversing the bits. F
 __Solution:__ This function is both one-to-one and onto.
 
 #### D) $F: \{0, 1\}^3 \to \{0, 1\}^4$
+
 The output of f is obtained by taking the input string and adding an extra copy of the first bit to the end of the string. For example, f(100) = 1001.
 
-__Solution:__ This function is one-to-one but NOT onto. Onto functions must have a domain that is greater than or equal to it's target, $\vert A \vert = \vert B \vert$. Since $\vert \{0, 1\}^3 \vert \neq \vert \{0, 1\}^4$, this function cannot be onto.
+__Solution:__ This function is one-to-one but NOT onto. Onto functions must have a domain that is greater than or equal to it's co-domain such that $\vert A \vert \geq \vert B \vert$. Since $\vert \{0, 1\}^3 \vert < \vert \{0, 1\}^4 \vert$, this function cannot be onto.
 
 #### G) 
 
 Let A be defined to be the set $\{1, 2, 3, 4, 5, 6, 7, 8\}$ and let $B = \{1\}$. $f: P(A) \to P(A)$. For $X \subseteq A$, $f(X) = X - B$. Recall that for a finite set A, P(A) denotes the power set of A which is the set of all subsets of A.
 
-__Solution:__  This function is NEITHER one-to-one NOR onto. The elements $\{1, 2\}$ and $\{2\}$ will both match with $\{2\}$ in the target, such that $f(\{1, 2\}) = f(\{2\}) = \{2\}$, therefore showing it can't be one-to-one.
+__Solution:__  This function is NEITHER one-to-one NOR onto. The elements $\{1, 2\}$ and $\{2\}$ will both match with $\{2\}$ in the co-domain, such that $f(\{1, 2\}) = f(\{2\}) = \{2\}$. Therefore showing it can't be one-to-one.
 
-No element in the $P(A)$ where $f(x) = \{1\}$, therefore showing it can't be onto.
+There is no element in the $P(A)$ where $f(x) = \{1\}$. Therefore, it can't be onto.
 
 ### Give an example of a function from the set of integers to the set of positive integers that is:
 
 #### one-to-one, but not onto.
 
 $$
-\begin{equation*}
-f(x) = \begin{cases}
+f(x) = \begin{cases} 
     2x+3 &\text {if } x \geq 0 \\
     -2x &\text{if } x < 0
         \end{cases}
-\end{equation*}
 $$
 
 #### onto, but not one-to-one.
@@ -131,12 +132,10 @@ $$
 #### one-to-one, and onto.
 
 $$
-\begin{equation*}
 f(x) = \begin{cases}
     2x+1 &\text {if } x \geq 0 \\
     -2x &\text{if } x < 0
         \end{cases}
-\end{equation*}
 $$
 
 #### neither one-to-one nor onto.
@@ -145,6 +144,8 @@ $$
 f(x) = x^2
 $$
 
+\newpage
+
 ## Question 5:
 
 ### 4.3.2 Finding inverses of functions.
@@ -152,6 +153,17 @@ $$
 For each of the following functions, indicate whether the function has a well-defined inverse. If the inverse is well-defined, give the input/output relationship of $f^{-1}$
 
 #### C) $f:\mathbb{R} \to \mathbb{R}.$ $f(x) = 2x + 3$
+
+__Solution:__ The inverse of the function is well-defined
+$$
+\begin{aligned}
+f(x) &= 2x + 3 \\
+y &= 2x + 3 \\
+y-3 &= 2x \\
+\frac{y-3}{2} &= x \\
+f^-1{x} &= \frac{y-3}{2}
+\end{aligned}
+$$
 
 #### D)
 Let $A$ be defined to be the set $\{1, 2, 3, 4, 5, 6, 7, 8\}$
@@ -165,52 +177,133 @@ __Solution:__ The inverse for this function is NOT well-defined.
 $f^{-1}(1)$ would produce multiple values from the domain $P(A)$ such as $\{0\}$, $\{1\}$ and other such single element sets. 
 
 #### G) $f: \{0, 1\}^3 \to \{0, 1\}^3.$
+
 The output of $f$ is obtained by taking the input string and reversing the bits. For example. $f(011) = 110.$
 
 __Solution:__ The inverse of this function is well-defined.
 
-$$
-\begin{equation*}
-f(x)
-\end{equation*}
-$$
+The function of $f$ is to reverse it's input. It follows that it's inverse function, $f^-1$, performs the same operation such that $f^-1 = f$.
 
 #### I) $f: \mathbb{Z} \times \mathbb{Z} \to \mathbb{Z} \times \mathbb{Z}, f(x, y)= (x + 5, y - 2)$
 
 __Solution:__ The inverse of this function is well-defined.
 
 $$
-\begin{align*}
+\begin{aligned}
 f(x, y) &= (x + 5, y - 2) \\
 f^{-1}(x, y) &=  (x - 5, y + 2)
-
-\end{align*}
+\end{aligned}
 $$
 
-### 4.4.8
+### 4.4.8 Explicit formulas for compositions of functions
 
-#### C)
+The domain and target set of functions f, g, and h are $\mathbb{Z}$. The functions are defined as:
 
-#### D)
+- $f(x) = 2x + 3$
+- $g(x) = 5x + 7$
+- $h(x) = x^2 + 1$
 
-### 4.4.2
+Give an explicit formula for each function given below.
 
-#### B)
+#### C) $f \circ h$
 
-#### C)
+$$
+\begin{aligned}
+f \circ h(x) &= 2(x) + 3 \\
+&= 2(x^2 + 1) + 3 \\
+&= 2x^2 + 2 + 3 \\
+&= 2x^2 + 5
+\end{aligned}
+$$
 
-#### D)
+#### D) $h \circ f$
 
-### 4.4.6
+$$
+\begin{aligned}
+h \circ f &= x^2 + 1 \\
+&= (2x + 3)^2 + 1 \\
+&= 4x^2 + 6x + 6x + 9 + 1 \\
+&= 4x^2 + 12x + 10
+\end{aligned}
+$$
 
-#### C)
+### 4.4.2: Composition of functions on integers.
 
-#### D)
+Consider three functions f, g, and h, whose domain and target are $\mathbb{Z}$. Let:
 
-#### E)
+$f(x = x^2)$
 
-### 4.4.4
+$g(x) = 2^x$
 
-#### C)
+$h(x) = \lceil \frac{x}{5} \rceil$
 
-#### D)
+#### B) Evaluate $(f \circ h)(52)$
+
+$$
+\begin{aligned}
+(f \circ h)(52) &= x^2\\
+&= \lceil \frac{x}{5} \rceil^2 \\
+&= \lceil \frac{52}{5} \rceil^2 \\
+&= 11^2 \\
+&= 121
+\end{aligned}
+$$
+
+
+#### C) Evaluate $(g \circ h \circ f)(4)$
+
+$$
+\begin{aligned}
+(g \circ h \circ f)(4) &= 2^x\\
+&= 2^{\lceil \frac{x^2}{5} \rceil}\\
+&= 2^{\lceil \frac{4^2}{5} \rceil}\\
+&= 2^{\lceil \frac{16}{5} \rceil}\\
+&= 2^{4}\\
+&= 16
+\end{aligned}
+$$
+
+#### D) Give a mathematical expression for $h \circ f$.
+
+$$
+\begin{aligned}
+g \circ h &=\lceil \frac{x}{5} \rceil  \\
+&= \lceil \frac{x^2}{5} \rceil
+\end{aligned}
+$$
+
+### 4.4.6: Composition of functions on sets of strings.
+
+Define the following functions f, g, and h:
+
+- $f: \{0, 1\}^3 \to \{0, 1\}^3$. The output of f is obtained by taking the input string and replacing the first bit by 1, regardless of whether the first bit is a 0 or 1. For example $f(001) = 101$ and $f(110) = 110$.
+- $g: \{0, 1\}^3 \to \{0, 1\}^3$. The output of g is obtained by taking the input string and reversing the bits. For example, $g(011) = 110$.
+- $h: \{0, 1\}^3 \to \{0, 1\}^3$. The output of h is obtained by taking the input string x, and replacing the last bit with a copy of the first bit. For example, $h(011) = 010$.
+
+#### C) What is $(h \circ f)(010)$?
+
+__Solution:__ $(h \circ f)(010) = h(f(010)) = h(110) = 111$
+
+#### D) What is the range of $h \circ f$?
+
+__Solution:__ $\{101, 111\}$
+
+#### E) What is the range of $g \circ f$?
+
+__Solution:__ $\{001, 011, 101, 111\}$
+
+\newpage
+
+## Extra Credit
+
+### 4.4.4: Composition of onto and one-to-one functions.
+
+Let $f: X \to Y$ and $g: Y \to Z$ be two functions.
+
+#### C)  Is it possible that f is not one-to-one and $g \circ f$ is one-to-one? Justify your answer. If the answer is "yes", give a specific example for f and g.
+
+No, this is not possible. Imagine we have two functions, f and g who's domains are all non-negative numbers. Lets assume f is not one-to-one, when $f(1) = 1$ and $f(2) = 1$. If that is the case, then $(g \circ f)(1) = g(f(1)) = g(1)$. This would also apply to $(g \circ f)(2) = g(f(2)) = g(1)$. So when x = 1 or x = 2, $g(f(x))$ will always evaluate to $g(1)$, thereby making it not one to one.
+
+#### D)  Is it possible that g is not one-to-one and $g \circ f$ is one-to-one? Justify your answer. If the answer is "yes", give a specific example for f and g.
+
+Yes, this is possible. Imagine we have two function, a function f $f: \mathbb{R^+} \to \mathbb{R^+}$ given by $f(x) = x + 0$ and a function $g: \mathbb{R} \to \mathbb{R^+}$ given by $f(x) = x^2 $. In this case, the function $g$ is not one-to-one. Now lets assume that the composition $g \circ f$ is one-to-one. While $g$ is not one-to-one, it is because negative numbers will map to the same elements as positive numbers in the co-domain of $g$. However, since $f$ has a domain of all positive real numbers, it's image will only be the subset of positive values in the domain of $g$. Thus, $g \circ f$ can still be one-to-one.
