Updated for homework 7 and submission

--- a/week7/homework/ac10281_hw7_q3to7.md
+++ b/week7/homework/ac10281_hw7_q3to7.md
@@ -4,6 +4,7 @@ author: Adam Collado
 toc: true
 block-headings: true
 ---
+\newpage
 
 ## Question 3:
 
@@ -13,7 +14,7 @@ Give complete proofs for the growth rates of polynomials below. You should provi
 
 #### b) $f(n) = n^3 + 3n^2 + 4$. Prove that $f = \Theta(n^3)$
 
-In order to prove that $n^3 + 3n^2 + 4 = \Theta(n^3)$ we will show that the upper-bound is $n^3 + 3n^2 + 4 = O(n^3)$ and the lower bound is $n^3 + 3n^2 + 4 = \Omega(n^3)$.
+__Solution__: In order to prove that $n^3 + 3n^2 + 4 = \Theta(n^3)$ we will show that the upper-bound is $n^3 + 3n^2 + 4 = O(n^3)$ and the lower bound is $n^3 + 3n^2 + 4 = \Omega(n^3)$.
 
 First we will find $O(n^3)$:
 
@@ -43,11 +44,39 @@ Since $T(N) = O(n^3)$ and $T(N) = \Omega(n^3)$, it follows that $5n^3 + 2n^2 + 3
 
 ### 8.3.5: Worst-case time complexity - mystery algorithm.
 
+#### a) Describe in English how the sequence of numbers is changed by the algorithm.
+
+__Solution__: This is a partial sort algorithm that takes a list of $a$ numbers with a length of $n$, and partially sorts the algorithm by placing numbers less than $p$ to the left of the list.
+
+The algorithm starts by looking at the beginning of the list (with i initially being set to index the beginning of the list) and traverses the list until i is no longer less than j (which is initially set to the end of the list) or if it the position $a_i$ is greater than p. If $a_i$ is greater than or equal to p, it then starts traversing the list from $j$ and moving to the left. In this case, it will continue this until j is no longer greater than i, or $a_j$ is less than p. If it does find that $a_j$ is less than p, it swaps the positions of $a_i$ and $a_j$. It will then continue repeating this process until index i is no longer less than j. 
 
 #### b) What is the total number of times that the lines "i := i + 1" or "j := j - 1" are executed on a sequence of length n? Does your answer depend on the actual values of the numbers in the sequence or just the length of the sequence? If so, describe the inputs that maximize and minimize the number of times the two lines are executed.
 
 __Solution__: "i := i + 1" or "j := j -1" should execute n-1 times. The length of this will be based on the the length n of the sequence. The algorithm will increase and decrement throughout the sequence, but will always stop short of i = j. Thus the algorithm will always run n - 1 times.
 
+#### c) What is the total number of times that the swap operation is executed? Does your answer depend on the actual values of the numbers in the sequence or just the length of the sequence? If so, describe the inputs that maximize and minimize the number of times a swap is executed.
+
+__Solution__: The number of times a swap operation occurs is entirely dependent on the values in the list a, and the number of the parameter p. 
+
+In the minimum case:
+
+- if p is greater than or equal to all values
+- if the only value greater than or equal to p is located the first item and the rest are less than p
+- or p is less than all values in the list
+
+Then no swap operations will occur.
+
+In the maximum case, the array will have to be arranged in such away that the first n/2 elements of the list is greater than p, and the latter n/2 elements of the list are less than p, then there will be $\lfloor n/2 \rfloor$ swap operations.
+
+#### d) Give an asymptotic lower bound for the time complexity of the algorithm. Is it import to consider the worst-case input in determining an asymptotic lower bound (using $\Omega$) on the time complexity of th algorithm?
+
+__Solution__: This algorithm has a time complexity of $\Omega(n)$ as it's lower bound. The worse case scenario does not change this. Even if every member in the list gets swapped with each other, it traverses the list at the same rate it would if there were no swaps that occurred. That is, this algorithm will always execute $n-1$ times regardless of the values and arrangement in the list.
+
+#### e) Give a matching upper bound (using O-notion) for the time complexity of the algorithm.
+
+__Solution__: As stated in the previous question, the number of operations does not change the time complexity of the algorithms. Therefore, it's time complexity is $O(n)$.
+
+\newpage
 ## Question 4:
 
 ### 5.1.2: Counting passwords made up of letters, digits and special characters
@@ -77,47 +106,95 @@ __Solution__: $9 * 26 * 26 * 26 * 26 * 8 * 7 = 230315904$
 __Solution__: $9 * 26 * 25 * 24 * 23 * 8 * 7 = 180835200$
 ### 5.2.3: Using the bijecttion rule to count binary strings with even parity.
 
+
 #### a) Show a bijection between $B^9$ and $E_{10}$. Explain why your function is a bijection.
+
+__Solution__: Lets us define a function $f: B^9 \to E^9$ such that if $x \in B^9$ then $x$ will always be a string of bits with a last digit that is determined on whether the number of 1's is even or odd.
+
+If the number of 1's are even a 0 is appended, $f(111100000) = 1111000000$
+
+If the number of 1's are odd, a 1 is appended, $f(111000000) = 1110000001$
+
+Such a function will be both one-to-one and onto, and therefore a bijection.
+
+$f$ is one-to-one since for each element in $B^9$ can only match to an element in $E^10$ if the first nine digits are equal. If they are not equal, they won't match.
+
+$f$ is onto because all values of $E^10$ will be matched from elements of $B^9$ since, since all elements of $B^9$ are in the first 9 digits of $E^10$.
+
+Lastly, a bijection is defined for $B^9 \to E^{10}$ when both have equivalent cardinailities. Since $E^10$ is a bit string that only produces bit strings with even 1's, we can define the cardinaility of $E^10$ as $2^{10}/2$.
+
+Thus, $\vert B^9 \vert = \vert E^{10}/2 \vert$ = 512, thus proving for the bijection rule.
 
 #### b) What is $\vert E_{10} \vert$?
 
+As explained in the previous question, $E^10$ is a bit string that only produces bit strings with even 1's. Therefore, $\vert E^{10}/2 \vert$ = 512.
+
+\newpage
 ## Question 5:
 
 ### 5.4.2: Counting telephone numbers.
 
+At a certain university in the U. S., all phone numbers are 7-digits long and start with either 824 or 825.
+
 #### a) How many different phone numbers are possible?
 
+__Solution__: $10^4 * 2 = 10000 * 2 = 20000$
+
 #### b) How many different phone numbers are there in which the last four digits are all different?
+
+__Solution__: $P(10, 4) * 2 = 10 * 9 * 8 * 7 * 2 = 10080$
 
 ### 5.5.3: Counting bit strings
 
 #### a) No restrictions.
 
+__Solution:__ $2^{10} = 1024$
+
 #### b) The string starts with 001.
+
+__Solution:__ $2^7 = 128$
 
 #### c) The string starts with 001 or 10.
 
+__Solution:__ $2^8 + 2^7 = 384$
+
 #### d) The first two bits are the same as the last two bits.
+
+__Solution:__ $2^8 256$
 
 #### e) The string has exactly six 0's.
 
+__Solution:__ ${10 \choose 6} = 210$
+
 #### f) The string has exactly six 0's and the first bit is 1.
 
+__Solution:__ ${9 \choose 6} = 84$
 #### g) There is exactly one 1 in the first half and exactly three 1's in the second half.
 
+__Solution:__ ${5 \choose 1} + {5 \choose 3} = 50$
 ### 5.5.5: Choosing a chorus.
 
 #### a) There are 30 boys and 35 girls that try out for a chorus. The choir direction will select 10 girls and 10 boys from the children trying out. How many ways are there for the choir director to make his selection?
+
+__Solution__: ${30 \choose 10} * {35 \choose 10}$
 
 ### 5.5.8: Counting five-card poker hands.
 
 #### c) How many five-card hands are made entirely of hearts and diamonds?
 
+__Solution__: ${26 \choose 5}$
+
 #### d) How many five-card hands have four cards of the same rank?
 
-#### e) A "full house" is a five-card hand that has two cards of the same rank and three cards of the same rank. For example, {queen of hearts, queen of spades, 8 of diamonds, 8 of spades, 8 of clubs}. How many five-ccard hands contain a full house?
+__Solution__: ${13 \choose 1} * {48 \choose 1}$
+
+#### e) A "full house" is a five-card hand that has two cards of the same rank and three cards of the same rank. For example, {queen of hearts, queen of spades, 8 of diamonds, 8 of spades, 8 of clubs}. How many five-card hands contain a full house?
+
+__Solution__: ${13 \choose 1} * {4 \choose 2} * {12 \choose 1} * {4 \choose 3}$
 
 #### f) How many five-card hands do not have any two cards of the same rank?
+
+__Solution__: ${13 \choose 5} * {4 \choose 1} ^ 5$
 
 ### 5.6.6: Selecting a committe of senators.
 
@@ -125,32 +202,53 @@ A country has two political parties, the Demonstrators and the Repudiators. Supp
 
 #### a) How many ways are there to select a committee of 10 senate members with the same number of Demonstrators and Repudiators?
 
+__Solution__: ${44 \choose 5} * {56 \choose 5}$
+
 #### b) Suppose that each party must select a speaker and vice speaker. How many ways are there for the two speakers and two vice speakers to be selected?
 
+__Solution__: ${44 \choose 2} * {56 \choose 2}$
+
+\newpage
 ## Question 6:
 
 ### 5.7.2: Counting 5-card hands from a deck of standard playing cards.
 
 #### a) How many 5-card hands have at least one club?
 
+__Solution__: ${52 \choose 5} - {39 \choose 5}$
+
 #### b) How many 5-card hands have at least two cards with the same rank?
 
-### 5.8.4
+__Solution__: ${52 \choose 5} - {13 \choose 5} * 4^5$
+
+### 5.8.4: Distributing comic books.
 
 20 different comic books will be distributed to five kids.
 
 #### a) How many ways are there to distribute the comic books if there are no restrictions on how many go to each kid (other than the fact that all 20 will be given out)?
 
+__Solution__: There will be $5^20$ ways.
 
 
 #### b) How many ways are there to distribute the comic books if they are divided evenly so that 4 go to each kid?
 
+__Solution__: $\frac{20!}{4!4!4!4!4!}$
+
+\newpage
 ## Question 7:
 
 #### a) 4
 
+__Solution:__ There is no number of one-to-one functions for a set 5 to a set of 4 elements, as one-to-one functions require $|X| >= |Y|$.
+
 #### b) 5
+
+__Solution:__ $5! = 120$
 
 #### c) 6
 
+__Solution:__ $P(6, 5) =  \frac{6!}{1!} = 720$
+
 #### d) 7
+
+__Solution:__ $P(7, 5) = \frac{7!}{2!} = 2520$
