--- a/week8/ac10281_w8_q7to10.md
+++ b/week8/ac10281_w8_q7to10.md
@@ -10,45 +10,45 @@ block-headings: true
 
 ### 6.1.5: The probability of an event under the uniform distribution - 5-card hands.
 
-A 5-card hand is dealt form a perfectly shuffled deck of playing cards. What is the probability of each of the following events?
+__Solution:__ A 5-card hand is dealt form a perfectly shuffled deck of playing cards. What is the probability of each of the following events?
 
 #### b) What is the probability that the hand is a three of a kind? A three of a kind has 3 cards of the same rank. The other two cards do not have the same rank as each other and do not have the same rank as the three with the same rank.
 
-There are $13 \choose 1$ ways to select a three of a kind of a specific rank. Of those 3 cards, there are $4 \choose 3$ ways to select from possible suites. Of the two remaining chards, there are $4 \choose 1$ ways to select the suites for those. Finally, since the last two remaining cards must be a different rank, we can select their possible ranks from the 12 remaining values, $12 \choose 2$. All together the probability for selecting a three of a kind is as follows:
+__Solution:__ There are $13 \choose 1$ ways to select a three of a kind of a specific rank. Of those 3 cards, there are $4 \choose 3$ ways to select from possible suites. Of the two remaining chards, there are $4 \choose 1$ ways to select the suites for those. Finally, since the last two remaining cards must be a different rank, we can select their possible ranks from the 12 remaining values, $12 \choose 2$. All together the probability for selecting a three of a kind is as follows:
 
 $\frac{{13 \choose 1 }{ 12 \choose 2}{4 \choose 3}{4 \choose 1}{4 \choose 1}}{4 \choose 3}$
 
 #### c) What is the probability that all 5 cards have the same suit?
 
-There are $13 \choose 5$ ways to select 5 cards from the 13 ranks available. Specific ranks does not matter for this calculation since we are focusing on just suits. For that, we want to select cards from only 1 suit. The number of possibilities for this is $4 \choose 1$. All together we can find the probability by calculating the following:
+__Solution:__ There are $13 \choose 5$ ways to select 5 cards from the 13 ranks available. Specific ranks does not matter for this calculation since we are focusing on just suits. For that, we want to select cards from only 1 suit. The number of possibilities for this is $4 \choose 1$. All together we can find the probability by calculating the following:
 
 $\frac{{13 \choose 5}{4 \choose 1}}{52 \choose 5}$
 
 #### d) What is the probability that the hand is a two of a kind? A two of a kind has two cards of the same rank (called the pair). Among the remaining three cards, not in a pair, no two have the same rank and none of them have the same rank as the pair.
 
-There are $13 \choose 1$ ways to select the rank that the pair will represent. The suits of the pair can be select $4 \choose 2$ ways. For the remaining 3 cards, we can select among the 12 remaining ranks that were not selected in the pair and find $12 \choose 3$ combinations. Then we can use $4 \choose 1$ to find the number of ways that each card can be selected. All together we can find the probability by calculating the following:
+__Solution:__ There are $13 \choose 1$ ways to select the rank that the pair will represent. The suits of the pair can be select $4 \choose 2$ ways. For the remaining 3 cards, we can select among the 12 remaining ranks that were not selected in the pair and find $12 \choose 3$ combinations. Then we can use $4 \choose 1$ to find the number of ways that each card can be selected. All together we can find the probability by calculating the following:
 
 $\frac{{13 \choose 1}{4 \choose 2}{12 \choose 3}{4 \choose 1}{4 \choose 1}{4 \choose 1}}{52 \choose 5}$
 
 ### 6.2.4: The probability of events - 5-card hands.
 
-A 5-card hand is dealt from a perfectly shuffled deck of playing cards. What is the probability of each of the following events?
+__Solution:__ A 5-card hand is dealt from a perfectly shuffled deck of playing cards. What is the probability of each of the following events?
 
 #### a) The hand has at least one club.
 
-We can solve this by finding the complement of this event, would would be selecting a hand where no card is a club. For this we can subtract 52 - 13, since a single suit will take up 13 cards and we need to remove it from the pool of total cards. After that, we can find $39 \choose 5$ ways that cards can be selected that aren't a club. After, we can subtract this from 1 to get the probability of selecting a club.
+__Solution:__ We can solve this by finding the complement of this event, would would be selecting a hand where no card is a club. For this we can subtract 52 - 13, since a single suit will take up 13 cards and we need to remove it from the pool of total cards. After that, we can find $39 \choose 5$ ways that cards can be selected that aren't a club. After, we can subtract this from 1 to get the probability of selecting a club.
 
 $1 - \frac{39 \choose 5}{52 \choose 5}$
 
 #### b) The hand has at least two cards with the same rank.
 
-We can solve this by finding the complement of this event, which would be selecting a hand where every card is a different rank. There are $13 \choose 5$ different ways you can pick 5 different ranks. There are 4 suits to select from, and for each card there are $4 \choose 1$ ways to select them. We can subtract from this complement to get the probability of selecting a single rank (in this case a club) by the following:
+__Solution:__ We can solve this by finding the complement of this event, which would be selecting a hand where every card is a different rank. There are $13 \choose 5$ different ways you can pick 5 different ranks. There are 4 suits to select from, and for each card there are $4 \choose 1$ ways to select them. We can subtract from this complement to get the probability of selecting a single rank (in this case a club) by the following:
 
 $1 - \frac{{13 \choose 5}4^5}{52 \choose 5}$
 
 #### c) The hand has exactly one club or exactly one spade.
 
-For this we will have to find the probability for each event, and then subtract it by the union of events, since both of these events aren't mutually exclusive. The probability of each event is the same. There are $13 \choose 1$ ways to select a card of a specific suit. The remaining cards can be selected $39 \choose 4$ ways, after excluding the 13 card from the first rank (since we are selecting for a specific rank). 
+__Solution:__ For this we will have to find the probability for each event, and then subtract it by the union of events, since both of these events aren't mutually exclusive. The probability of each event is the same. There are $13 \choose 1$ ways to select a card of a specific suit. The remaining cards can be selected $39 \choose 4$ ways, after excluding the 13 card from the first rank (since we are selecting for a specific rank). 
 
 For the intersection, we will have to find the number of times that exactly one club AND one spade is selected. Of which, there are ${13 \choose 1}$ ways to select the first card, and ${13 \choose 1}$ ways for the second card. After, we can isolate the suits by subtracting 52 - 26 = 26. This leaves us with selecting the remaining 3 cards from the other suits, which there are ${26 \choose 3}$ ways to select.
 
@@ -58,7 +58,7 @@ $\frac{{13 \choose 1}{39 \choose 4}}{52 \choose 5} + \frac{{13 \choose 1}{39 \ch
 
 #### d) The hand has at least one club or at least one spade.
 
-We can solve this by finding the complement of this event, which would be selecting a hand in which neither a club nor a spade is selected.
+__Solution:__ We can solve this by finding the complement of this event, which would be selecting a hand in which neither a club nor a spade is selected.
 
 We can find this by subtracting 52 - 26. This is because we need to remove two suits from the pool, which restricts the amount of cards we can draw from by 26. From here, we can find $26 \choose 5$ ways that cards can be selected without drawing a club or a spade. Then we can subtract by 1 to get the probability.
 
@@ -74,11 +74,25 @@ The letters {a, b, c, d, e, f, g} are put in random order. Each permutation is e
 
 A: The letter b falls in the middle (with three before it and three after it)
 
-B: The letter c appears tot he right of b, although c is not necessarily immediately to the right of b. For example, "agbdcef" would be an outcome in this event.
+B: The letter c appears tht he right of b, although c is not necessarily immediately to the right of b. For example, "agbdcef" would be an outcome in this event.
 
 C: The letters "def" occur together in that order (e.g. "gdefbca")
 
 #### a) Calculate the probability of each individual event. That is, calculate p(A), p(B), and p(C).
+
+__Solution:__
+
+__For p(A):__ If b is restricted to the middle, then that means that 'b' in a single position for every permutation. We then just have to find permutations for the remaining 6, which can be found by calculating 6!. We then find the probability by dividing by 7!. 
+
+$\frac{6!}{7!} = 0.1429$
+
+__For p(B):__ If a will always be to the right of c for every permutation, then this effectively divides the number of permutations by two. So in this case we can find the probability of p(B) by dividing 7! by 2 * 7!.
+
+$\frac{7!}{2 * 7!} = 0.5$
+
+__For p(C):__ Since "def" must appear in the same order for every permutation, we can say that it's just 1 element, and therefore there's only 5 elements in word. We can then find this by calculating 5!.
+
+$\frac{5!}{7!} = 0.0238$
 
 #### b) What is p(A|C)?
 
