Almost finished week 8 homework

--- a/week8/ac10281_w8_q7to10.md
+++ b/week8/ac10281_w8_q7to10.md
@@ -16,19 +16,19 @@ __Solution:__ A 5-card hand is dealt form a perfectly shuffled deck of playing c
 
 __Solution:__ There are $13 \choose 1$ ways to select a three of a kind of a specific rank. Of those 3 cards, there are $4 \choose 3$ ways to select from possible suites. Of the two remaining chards, there are $4 \choose 1$ ways to select the suites for those. Finally, since the last two remaining cards must be a different rank, we can select their possible ranks from the 12 remaining values, $12 \choose 2$. All together the probability for selecting a three of a kind is as follows:
 
-$\frac{{13 \choose 1 }{ 12 \choose 2}{4 \choose 3}{4 \choose 1}{4 \choose 1}}{4 \choose 3}$
+$\frac{{13 \choose 1 }{ 12 \choose 2}{4 \choose 3}{4 \choose 1}{4 \choose 1}}{{4 \choose 3}}$
 
 #### c) What is the probability that all 5 cards have the same suit?
 
 __Solution:__ There are $13 \choose 5$ ways to select 5 cards from the 13 ranks available. Specific ranks does not matter for this calculation since we are focusing on just suits. For that, we want to select cards from only 1 suit. The number of possibilities for this is $4 \choose 1$. All together we can find the probability by calculating the following:
 
-$\frac{{13 \choose 5}{4 \choose 1}}{52 \choose 5}$
+$\frac{{13 \choose 5}{4 \choose 1}}{{52 \choose 5}}$
 
 #### d) What is the probability that the hand is a two of a kind? A two of a kind has two cards of the same rank (called the pair). Among the remaining three cards, not in a pair, no two have the same rank and none of them have the same rank as the pair.
 
 __Solution:__ There are $13 \choose 1$ ways to select the rank that the pair will represent. The suits of the pair can be select $4 \choose 2$ ways. For the remaining 3 cards, we can select among the 12 remaining ranks that were not selected in the pair and find $12 \choose 3$ combinations. Then we can use $4 \choose 1$ to find the number of ways that each card can be selected. All together we can find the probability by calculating the following:
 
-$\frac{{13 \choose 1}{4 \choose 2}{12 \choose 3}{4 \choose 1}{4 \choose 1}{4 \choose 1}}{52 \choose 5}$
+$\frac{{13 \choose 1}{4 \choose 2}{12 \choose 3}{4 \choose 1}{4 \choose 1}{4 \choose 1}}{{52 \choose 5}}$
 
 ### 6.2.4: The probability of events - 5-card hands.
 
@@ -38,13 +38,13 @@ __Solution:__ A 5-card hand is dealt from a perfectly shuffled deck of playing c
 
 __Solution:__ We can solve this by finding the complement of this event, would would be selecting a hand where no card is a club. For this we can subtract 52 - 13, since a single suit will take up 13 cards and we need to remove it from the pool of total cards. After that, we can find $39 \choose 5$ ways that cards can be selected that aren't a club. After, we can subtract this from 1 to get the probability of selecting a club.
 
-$1 - \frac{39 \choose 5}{52 \choose 5}$
+$1 - \frac{{39 \choose 5}}{{52 \choose 5}}$
 
 #### b) The hand has at least two cards with the same rank.
 
 __Solution:__ We can solve this by finding the complement of this event, which would be selecting a hand where every card is a different rank. There are $13 \choose 5$ different ways you can pick 5 different ranks. There are 4 suits to select from, and for each card there are $4 \choose 1$ ways to select them. We can subtract from this complement to get the probability of selecting a single rank (in this case a club) by the following:
 
-$1 - \frac{{13 \choose 5}4^5}{52 \choose 5}$
+$1 - \frac{{13 \choose 5}4^5}{{52 \choose 5}}$
 
 #### c) The hand has exactly one club or exactly one spade.
 
@@ -54,7 +54,7 @@ For the intersection, we will have to find the number of times that exactly one 
 
 We can then calculate the probability with the following:
 
-$\frac{{13 \choose 1}{39 \choose 4}}{52 \choose 5} + \frac{{13 \choose 1}{39 \choose 4}}{52 \choose 5} - \frac{{13 \choose 1}{13 \choose 1}{26 \choose 3}}{52 \choose 5}$
+$\frac{{13 \choose 1}{39 \choose 4}}{{52 \choose 5}} + \frac{{13 \choose 1}{39 \choose 4}}{{52 \choose 5}} - \frac{{13 \choose 1}{13 \choose 1}{26 \choose 3}}{{52 \choose 5}}$
 
 #### d) The hand has at least one club or at least one spade.
 
@@ -62,7 +62,7 @@ __Solution:__ We can solve this by finding the complement of this event, which w
 
 We can find this by subtracting 52 - 26. This is because we need to remove two suits from the pool, which restricts the amount of cards we can draw from by 26. From here, we can find $26 \choose 5$ ways that cards can be selected without drawing a club or a spade. Then we can subtract by 1 to get the probability.
 
-$1 - \frac{26 \choose 5}{52 \choose 5}$
+$1 - \frac{{26 \choose 5}}{{52 \choose 5}}$
 
 \newpage
 
@@ -78,29 +78,46 @@ B: The letter c appears tht he right of b, although c is not necessarily immedia
 
 C: The letters "def" occur together in that order (e.g. "gdefbca")
 
-#### a) Calculate the probability of each individual event. That is, calculate p(A), p(B), and p(C).
+#### a) Calculate the probability of each individual event. That is, calculate $p(A)$, $p(B)$, and $p(C)$.
 
 __Solution:__
 
-__For p(A):__ If b is restricted to the middle, then that means that 'b' in a single position for every permutation. We then just have to find permutations for the remaining 6, which can be found by calculating 6!. We then find the probability by dividing by 7!. 
+__For $p(A)$:__ If b is restricted to the middle, then that means that 'b' in a single position for every permutation. We then just have to find permutations for the remaining 6, which can be found by calculating 6!. We then find the probability by dividing by 7!. 
 
-$\frac{6!}{7!} = 0.1429$
+$\frac{6!}{7!} = 1/7$
 
-__For p(B):__ If a will always be to the right of c for every permutation, then this effectively divides the number of permutations by two. So in this case we can find the probability of p(B) by dividing 7! by 2 * 7!.
+__For $p(B)$:__ If a will always be to the right of c for every permutation, then this effectively divides the number of permutations by two. So in this case we can find the probability of $p(B)$ by dividing 7! by 2 * 7!.
 
-$\frac{7!}{2 * 7!} = 0.5$
+$\frac{7!/2}{7!} = 1/2$
 
-__For p(C):__ Since "def" must appear in the same order for every permutation, we can say that it's just 1 element, and therefore there's only 5 elements in word. We can then find this by calculating 5!.
+__For $p(C)$:__ Since "def" must appear in the same order for every permutation, we can say that it's just 1 element, and therefore there's only 5 elements in word. We can then find this by calculating 5!.
 
-$\frac{5!}{7!} = 0.0238$
+$\frac{5!}{7!} = 1/42$
 
-#### b) What is p(A|C)?
+#### b) What is $p(A|C)$?
 
-#### c) What is p(B|C)?
+__Solution:__ In the case of $p(A|C)$, we can see that A and C are not mutually exclusive, as when "b" is in the middle, then the substring "def" can be placed at both the beginning and end of the string. Under both circumstances, we can get 3! permutations on both ends, which would mean that $p(A \cap C) = 2 * 3!$. So we can do the following to find the probability:
 
-#### d) What is p(A|B)?
+$p(A|C) = \frac{2*3!}{5!} = \frac{2}{5*4} = \frac{2}{20} = \frac{1}{10}$
+
+#### c) What is $p(B|C)$?
+
+__Solution:__ In the case of $p(B|C)$, we can see that B and C are not mutually exclusive, as a can still be to the right of c at the same time the substring "def" is in the string. To find the probability of $p(B \cap C)$, we have to divide 5! by 2. This is because the number of permutations is reduced to half, since c can no longer be on the right side for any permutation. And since the "def" substring essentially acts as one element, we reduce the number of elements to 5. Hence $p(B \cap C) = 5!/2$. We can then find the probably of $p(B|C)$ with the following:
+
+$p(B|C) = \frac{5!/2}{5!} = \frac{1}{2}$
+
+#### d) What is $p(A|B)$?
+
+__Solution:__ In the case of $p(A|B)$, we can see that A and B are not mutually exclusive, as 'a' can still be to the right of c at the same time that b is in the middle of the string. Similar to the previous questions, we have to divide the permutations for 6 elements (since 'b' is a static element). Thus, $p(A \cap B) = 6!/2$. We can find the probability of $p(A|B)$ with the following:
+
+$p(A|B) = \frac{6!/2}{7!/2} = \frac{360}{2520} = \frac{1}{7}$
 
 #### e) Which pairs of events among A, B, and C are independent?
+
+- __For $p(A|C)$:__ This pair is not independent. $p(A|C) = \frac{1}{10}$, which means that $p(A|C) \neq p(A)$ nor $p(A|C) \neq p(C)$
+- __For $p(B|C)$:__ This pair is independent. $p(B|C) = \frac{1}{2}$. Which means that $p(B|C) = p(B)$.
+- __For $p(A|B)$:__ This pair is independent. $p(A|B) = \frac{1}{1/7}$. Which means that $p(A|B) = p(B)$.
+
 
 ### 6.3.6: Calculating probabilities of independent events.
 
@@ -108,33 +125,53 @@ A biased coin is flipped 10 times. In a single flip of the coin, the probability
 
 #### b) The first 5 flips come up heads. The last 5 flips come up tails.
 
+__Solution:__ The probabiility of flipping heads is 1/3. So to calculate flipping heads 5 times in a row is $(1/3)^5$. The probability of flipping tails is 2/3. So to calculate flipping tails 5 times in a row is $(2/3)^5$. Since these two events are mutually independent, we can calculate their probabilities with the following:
+
+$\frac{1}{3}^5 * \frac{2}{3}^5$
+
 #### c) The first flip comes up heads. The rest of the flips come up tails.
+
+__Solution:__ The probability of flipping heads is 1/3. Since only one coin needs to be flipped heads, 1/3 will suffice. The rest of the coins needs to be flipped tails. The probability of a coin flipping tails is 2/3. Therefore, to flip it tails 9 times would be $1/3 ^ 9$. Thus we can calculate their probabilities with the following:
+
+$\frac{1}{3} * \frac{2}{3}^9$
 
 ### 6.4.2: Bayes` Theorem - detecting a loaded die.
 
 #### a) Assume that you have two dice, one of which is fair, and the other is biased toward landing on six, so that 0.25 of the time it lands on six, and 0.15 of the time it lands on each of 1, 2, 3, 4 and 5. You choose a die at random, and roll it six times, getting the values 4, 3, 6, 6, 5, 5. What is the probability that the die you chose is the fair die? The outcomes of the rolls are mutually independent.
 
+$p(X|F) = \frac{1}{6} *\frac{1}{6} *\frac{1}{6} *\frac{1}{6} *\frac{1}{6} *\frac{1}{6} = \frac{1}{46656}$
+
+$p(X|\overline F) = 0.15 * 0.15 * 0.25 * 0.25 * 0.15 * 0.15 = \frac{3}{20}$
+
+$p(F) = p(\overline F) = .5$
+
+$p(F|X) = \frac{{\frac{1}{46656} * .5}}{{\frac{1}{46656} * .5 + \frac{3}{20} * .5}} = 0.404$
+
 ## Question 9: 
 
-### 6.5.2
+### 6.5.2: Distribution over a random variable - aces in a 5-card hand.
 
-#### a)
+A hand of 5 cards is dealt from a perfectly shuffled deck of playing cards. Let the random variable A denote the number of aces in the hand.
 
-#### b)
+#### a) What is the range of A?
 
-### 6.6.1
+A = {0, 1, 2, 3, 4}
 
-#### a)
+#### b) Give the distribution over the random variable A.
 
-### 6.6.4
+### 6.6.1: Random variable expectations - expected number of girls chosen in a group.
 
-#### a)
+#### a) Two student council representatives are chosen at random from a group of 7 girls and 3 boys. Let G be the random variable denoting the number of girls chosen. What is E[G]?
 
-#### b)
+### 6.6.4: Expected values of squares.
 
-### 6.7.4
+#### a) A fair die is rolled once. Let X be the random variable that denotes the sqquare of the number that shows up on the die. For example, if the die comes up 5, then X = 25. What is E[X]?
 
-#### a)
+#### b) A fair coin is tossed three times. Let Y be the random variable that denotes the square of the number of heads. For example, in the outcome HTH, there are two heads and Y = 4. What is E[Y]?
+
+### 6.7.4: Expected values - matching coats.
+
+#### a) A class of 10 students hang up their coats when they arrive at school. Just before recess, the teacher hands one coat selected at random to each child. What is the expected number of children who get his or her own coat?
 
 ## Question 10
 
