Finishing week 8 homework

--- a/week8/ac10281_w8_q7to10.md
+++ b/week8/ac10281_w8_q7to10.md
@@ -125,7 +125,7 @@ A biased coin is flipped 10 times. In a single flip of the coin, the probability
 
 #### b) The first 5 flips come up heads. The last 5 flips come up tails.
 
-__Solution:__ The probabiility of flipping heads is 1/3. So to calculate flipping heads 5 times in a row is $(1/3)^5$. The probability of flipping tails is 2/3. So to calculate flipping tails 5 times in a row is $(2/3)^5$. Since these two events are mutually independent, we can calculate their probabilities with the following:
+__Solution:__ The probability of flipping heads is 1/3. So to calculate flipping heads 5 times in a row is $(1/3)^5$. The probability of flipping tails is 2/3. So to calculate flipping tails 5 times in a row is $(2/3)^5$. Since these two events are mutually independent, we can calculate their probabilities with the following:
 
 $\frac{1}{3}^5 * \frac{2}{3}^5$
 
@@ -147,6 +147,8 @@ $p(F) = p(\overline F) = .5$
 
 $p(F|X) = \frac{{\frac{1}{46656} * .5}}{{\frac{1}{46656} * .5 + \frac{3}{20} * .5}} = 0.404$
 
+\newpage
+
 ## Question 9: 
 
 ### 6.5.2: Distribution over a random variable - aces in a 5-card hand.
@@ -159,32 +161,81 @@ A = {0, 1, 2, 3, 4}
 
 #### b) Give the distribution over the random variable A.
 
+$\{(0, \frac{C(48, 5}{C(52,5)}), (1, \frac{C(4, 1)*C(48,4)}{C(52,5)}), (2, \frac{C(4, 2)*C(48,3)}{C(52,5)}), (3, \frac{C(4, 3)*C(48,2)}{C(52,5)})(4, \frac{C(4, 4)*C(48,1)}{C(52,5)})\}$
+
 ### 6.6.1: Random variable expectations - expected number of girls chosen in a group.
 
 #### a) Two student council representatives are chosen at random from a group of 7 girls and 3 boys. Let G be the random variable denoting the number of girls chosen. What is E[G]?
 
+$E[G] = 0 * \frac{{3 \choose 2}}{{10 \choose 2}} + 1 * \frac{{3 \choose 1}{7 \choose 1}}{{10 \choose 2}} + 2 * \frac{{7 \choose 2}}{{10 \choose 2}} = \frac{7}{5}$
+
 ### 6.6.4: Expected values of squares.
 
-#### a) A fair die is rolled once. Let X be the random variable that denotes the sqquare of the number that shows up on the die. For example, if the die comes up 5, then X = 25. What is E[X]?
+#### a) A fair die is rolled once. Let X be the random variable that denotes the square of the number that shows up on the die. For example, if the die comes up 5, then X = 25. What is E[X]?
+
+$E[X] = \frac{1}{6} * (1 + 4 + 9 + 16 + 25 + 36) = \frac{1}{6} * 91 = \frac{91}{6} = 15.16$
 
 #### b) A fair coin is tossed three times. Let Y be the random variable that denotes the square of the number of heads. For example, in the outcome HTH, there are two heads and Y = 4. What is E[Y]?
+
+$E[Y] = 0 * \frac{1}{8} + 1 * \frac{3}{8} + 4 * \frac{3}{8} + 9 * \frac{1}{8} = 3$
 
 ### 6.7.4: Expected values - matching coats.
 
 #### a) A class of 10 students hang up their coats when they arrive at school. Just before recess, the teacher hands one coat selected at random to each child. What is the expected number of children who get his or her own coat?
 
+$E(C_1) = 1 * \frac{1}{10} + (1 - \frac{1}{10}) * 0 = \frac{1}{10}$
+
+$E(C) = 10 * \frac{1}{10} = 1$
+
+\newpage
+
 ## Question 10
 
-### 6.8.1
+### 6.8.1: Probability of manufacturing defects
 
-#### a)
+The probability that a circuit board produced by a particular manufacturer has a defect is 1%. You can assume that errors are independent, so the event that one circuit board has a defect is independent of whether a different circuit board has a defect.
 
-#### b)
+#### a) What is the probability that out of 100 circuit boards made exactly 2 have defects?
 
-#### c)
+$b(98; 100, .99) = {100 \choose 98} .99 ^ {98} * .01 ^ {2} \approx .185$
 
-#### d)
+#### b) What is the probability that out of 100 circuit boards made at least 2 have defects?
 
-### 6.8.3
+$1 - b(99; 100, .99) = b(100; 100, .99)$
 
-#### b)
+$1 - {100 \choose 99} * .99 ^ {99} * .01 ^ {1} - {100 \choose 100} * .99 ^ {100} * .01 * {0}$
+
+$1 - .36971 - .366032 \approx .2642$
+#### c) What is the expected number of circuit boards with defects out of the 100 made?
+
+$E[D] = 100 * .01 = 1$
+
+#### d) Now suppose that the circuit boards are made in batches of two. Either both circuit boards in a batch have a defect or they are both free of defects. The probability that a batch has a defect is 1%. What is the probability that out of 100 circuit boards (50 batches) at least 2 have defects? What is the expected number of circuit boards with defects out of the 100 made? How do your answers compared to the situation in which each circuit board is made separately?
+
+__Probability of 2 defects in 50 batches__
+
+$1 - b{50;50, .99}$
+
+$1 - {50 \choose 50} * .99 ^ {50} * .01 ^ {0}$
+
+$1 - 1 * .605 * 1 \approx .395$
+
+__Expected Number of Circuit Boards with Defects__
+
+$E[D] = 50 * 2 * .01 = 1$
+
+The difference between the two situations is that the latter situation is not an independent event; a batch of circuit boards will always produce and equivalent circuit board, so any errors will automatically double the number of errors. This is why when finding the probability of 2 defects in 50 batches, we can only calculate the probability of 0 defects, since the probability of a single defect is the probability of two boards being defective. This same logic applies for finding the expected number of circuit boards.
+
+### 6.8.3: Detecting a biased coin.
+
+A gambler has a coin which is either fair (equal probability heads or tails) or is biased with a probability of heads equal to 0.3. Without knowing which coin he is using, you ask him to flip the coin 10 times. If the number of heads is at least 4, you can conclude that the coin is fair. If the number of heads is less than 4, you conclude that the coin is biased.
+
+#### b) What is the probability that you reach an incorrect conclusion if the coin is biased?
+
+If our conclusion is incorrect, that means the coin will land on heads greater than or equal to 4 times. We can find this by finding the probability of the coin landing less than heads 4 times, and subtracting that by 4:
+
+$1 - b(0;10,.3) + b(1;10,.3) + b(2;10,.3) + b(3;10,.3)$
+
+$1 - {10 \choose 0} * .3^{0} * .7^{10} + {10 \choose 1} * .3^{1} * .7^{9} + {10 \choose 2} * .3^{2} * .7^{8} + {10 \choose 3} * .3^{3} * .7^{7}$
+
+$1 - 0.0282 + .12 + .233 + .267 \approx .35$ 
