Updates to homework 11

--- a/week11/homework/ac10281_hw11_q5to6.md
+++ b/week11/homework/ac10281_hw11_q5to6.md
@@ -178,4 +178,33 @@ $\blacksquare$
 
 ### 7.5.1
 
-#### a)
+#### a) Prove that for any positive integer n, 4 evenly divides $3^{2n} - 1$.
+
+__Theroem:__ For any positive integer n, 4 evenly divides $3^{2n} - 1$
+
+__Base Case:__ n = 1
+
+For P(1):
+
+$$
+P(1) = 3^{2(1)} - 1 = 9 - 1 = 8
+$$
+
+4 evenly divides 8, therefore P(1) is true.
+
+__Inductive Step:__ We will show that if for any positive integer k, for P(k), 4 evenly divides $3^{2k} - 1$ is true, then it will follow that for P(k+1), 4 evenly divides $3^{2k+1} - 1$ is also true.
+
+By the inductive hypothesis, $3^{2k}-1$ is evenly divided by 4, it follows that $3^{2k}-1 = 4m$, where $m$ is an integer. We can then add 1 on both sides to get $3^{2k} = 4m + 1$, showing this statement is equivalent to the inductive hypothesis. Now we will show that $3^{2(k+1)}-1$ can be expressed as 4 times as integer.
+
+$$
+\begin{aligned}
+    3^{2(k+1)} - 1 &= 3^{2k+2} - 1 \\
+    &= 9 * 3^{2k} - 1 & \text{by algebra} \\
+    &= 9(4m + 1) - 1 & \text{by inductive hypothesis} \\
+    &= 36m + 9 - 1 \\
+    &= 36m + 8 \\
+    &= 4(9m + 2)
+\end{aligned}
+$$
+
+Since $m$ is an integer, (9m + 2) is also an integer. Therefore $3^{2(k+1)} - 1$ is equal to 4 times an integer, which also means that it is divisible by 4 $\blacksquare$
