Final Updates to Homework 11

--- a/week11/homework/ac10281_hw11_q5to6.md
+++ b/week11/homework/ac10281_hw11_q5to6.md
@@ -41,6 +41,22 @@ $\blacksquare$
 
 ### b) Use strong induction to prove that any positive integer $n(n \geq 2)$ can be written as a product of primes. 
 
+__Theorem:__ For any positive integer n, where n $\geq$ 2, that number can be written as a product of primes.
+
+__Base Case:__ n = 2, n = 4 
+
+It's clear that 2 is a prime number as it's a product of itself (2 * 1) and only itself.
+
+We use n = 4 since 4 is the first composite number greater than 2.
+
+4 = 2 * 2. This shows that 4 can be written as a product of primes.
+
+__Inductive Step:__ If we assume that for any number 2 to k, P(k) can be written as a product of primes, then it follows that k+1 can also be written as a product of primes.
+
+First we have to consider that for any k+1, it can be either a prime number or a composite. If it's a prime number, then k+1 can only be a product of it's self, k+1. This already satisfies the theorem, much in the same way the base case has.
+
+Next we have to consider k+1 being a composite number. In this case, we know that k+1 must be a product of two integers, $a$ and $b$ where $a$ and $b$ are greater than 2 and less than k. And since we've shown that $a$ and $b$ can be written as a product of primes in our inductive hypothesis, it follows that k+1 can also be written as a product of primes. $\blacksquare$
+
 \newpage
 
 ## Question 6
@@ -124,15 +140,16 @@ $$
 
 We will start with the left side of the equation and continue:
 
+
 $$
 \begin{aligned}
     \sum_{j=1}^{k+1} j^2 &= \sum_{j=1}^{k} + (k + 1)^2 & \text{separating the last }\\
     &= \frac{k(k+1)(2k+1)}{6} + (k + 1)^2 & \text{by inductive step}\\
-    &= \frac{k(k+1)(2k+1) + 6(k+1)^2}{6} & \\
-    &= \frac{k(k+1)(2k+1) + 6(k+1)(k+1)}{6} & \\
+    &= \frac{k(k+1)(2k+1) + 6(k+1)^2}{6} \\
+    &= \frac{k(k+1)(2k+1) + 6(k+1)(k+1)}{6} \\
     &= \frac{(k+1)(k(2k+1) + 6(k+1))}{6} & \text {by algebra} \\
-    &= \frac{(k+1)(2k^2+k + 6k+6)}{6} & \\ 
-    &= \frac{(k+1)(k+2)(2k+3)}{6} & \\ 
+    &= \frac{(k+1)(2k^2+k + 6k+6)}{6} \\ 
+    &= \frac{(k+1)(k+2)(2k+3)}{6} \\ 
 \end{aligned}
 $$
 
